Set application name to org_kde_powerdevil

Summary:
Previously application component name without any KAboutData was
org_kde_powerdevil (executable name), although, 972eb26d0558d commit
changed the component name to powerdevil, which had side-effects that
powerdevil would write shortcuts to powerdevil component and it would
conflict with old org_kde_powerdevil shortcuts, and ultimately none
would work.

In theory we can do migration of the shortcuts to powerdevil component
using kconf_update but that doesn't work, as kglobalaccel is already
started before powerdevil, resulting in kconf_update changes having no
effect, more on this in commit 4ae36ddddae which introduces the
PowerDevilApp::migratePre512KeyboardShortcuts() function, while in
theory PowerDevilApp::migratePre516KeyboardShortcuts can be introduced,
we can simply avoid this hassle by re-assigning old component name.

BUG: 407721

Reviewers: davidedmundson, romangg

Reviewed By: davidedmundson

Subscribers: fvogt, arojas, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21303